# Codeforces

./: .gitignore  CMakeLists.txt  Palindrome1952H.cpp  ProblemsetCounter.cpp  README.md  ThreeThreadlets1881B.cpp  template.cpp  template.h  template2.cpp  ¨
Problemsets/: AntonandDanik734A.cpp  AntonandLetters443A.cpp  ArrivaloftheGeneral144A.cpp  BearandBigBrother791A.cpp  BeautifulMatrix263A.cpp  Bit++282A.cpp  BoyorGirl236A.cpp  CalculatingFunction486A.cpp  CandiesandTwoSisters1335A.cpp  DivisibilityProblem1328A.cpp  Dominopiling50A.cpp  Drinks200B.cpp  Elephant617A.cpp  FarmerJohnsCardGame2060B.cpp  FizzBuzzRemixed2070A.cpp  GeorgeandAccommodation467A.cpp  HavingBeenaTreasurerinthePastIHelpGoblinsDeceive2072B.cpp  HelpfulMaths339A.cpp  HittheLottery996A.cpp  Hulk705A.cpp  IWannaBetheGuy469A.cpp  Insomniacure148A.cpp  Isyourhorseshoeontheotherhoof228A.cpp  Magnets344A.cpp  NearlyLuckyNumber110A.cpp  NextRound158A.cpp  Palindrome1952H.cpp  Pangram520A.cpp  PetyaandStrings112A.cpp  SoldierandBananas546A.cpp  StonesontheTable266A.cpp  SumofRoundNumbers1352A.cpp  Team231A.cpp  Translation41A.cpp  Watermelon4A.cpp  WayTooLongWords71A.cpp  Word59A.cpp  WordCapitalization281A.cpp  WrongSubtraction977A.cpp
Problemsets/1000Rating/: ArrayMerging1831B.cpp  BestBinaryString1837C.cpp  ChessTournament1569B.cpp  ContestStart1539A.cpp  CounttheNumberofPairs1800B.cpp  Crafting2055B.cpp  DeadlyLaser1721B.cpp  DifferentDifferences1772C.cpp  DistincSplit1791D.cpp  Dragons230A.cpp  GamewithDoors2004B.cpp  GoldRush1829D.cpp  GridReconstruction1816B.cpp  IsItaCat1800A.cpp  KeepitBeautiful1841B.cpp  MakeEqualAgain1931C.cpp  MaximumCostDeletion1550B.cpp  MinimumLCM1765M.cpp  Monsters1849B.cpp  NotAdjacentMatrix1520C.cpp  NotaCheapString1702D.cpp  OlyaandGamewithArrays1859B.cpp  OptimalReduction1713B.cpp  PermutationPrinting1930B.cpp  PointsonPlane1809B.cpp  PoweringtheHeroEasyVersion1800C1.cpp  PreparingfortheExam2051C.cpp  ProgressiveSquare1955B.cpp  Raspberries1883C.cpp  RedVersusBlue1659A.cpp  ReverseSort1605B.cpp  SaveMoreMice1593C.cpp  SkiResort1840C.cpp  SwapandDelete1913B.cpp  TwoDivisors1916B.cpp  TwoOutofThree1894B.cpp  XSum1676D.cpp  YetAnotherPermutationProblem1858C.cpp  YetnotherrokenKeoard1907B.cpp
Problemsets/1100Rating/: MaximumSum1832B.cpp  ProductofBinaryDecimals.cpp  RobinHoodinTown2014C.cpp  SorttheSubarray1821B.cpp  SplittingItems2004C.cpp  SummationGame1920B.cpp  TurtleFingersCounttheValuesofk1933C.cpp  VeryDifferentArray1921D.cpp
Problemsets/1200Rating/: RightLeftWrong2000D.cpp  SkibidusandSigma2065D.cpp  SwapColumnsandFindaPath2046A.cpp  YetAnotherCoinProblem1934B.cpp
Problemsets/1300Rating/: Digitalstringmaximization2050D.cpp
Problemsets/800Rating/: AGiftFromOrangutan2030A.cpp  AliceandBooks1978A.cpp  BeautifulYear271A.cpp  Bit++282A.cpp  BoyorGirl236A.cpp  Button1858A.cpp  ClockConversion1950C.cpp  ContestProposal1972A.cpp  DieRoll9A.cpp  FarmerJohnsChallenge1942A.cpp  Fibonacciness2060A.cpp  FindKDistinctPointswithFixedCenter1998A.cpp  FindMinimumOperations2020A.cpp  I_love_username155A.cpp  InsertDigit1811A.cpp  KevinandArithmetic2061A.cpp  LeastProduct1917A.cpp  MakeEqual1931B.cpp  MaxPlusSize2019A.cpp  MaximizetheLastElement1991A.cpp  MedianofanArray1946A.cpp  MinimalCoprime2063A.cpp  NearlyLuckyNumber110A.cpp  NewYearandHurry750A.cpp  NextRound158A.cpp  NotQuiteLatinSquare1915B.cpp  OddOneOut1915A.cpp  Palindrome1952H.cpp  PatrickandShopping599A.cpp  PerfectPermutation1711A.cpp  PhoneDesktop1974A.cpp  Plus-MinusSplit1919B.cpp  PoliceRecruits427A.cpp  Presents136A.cpp  QuestionMarks1993A.cpp  RudolfandtheTicket1941A.cpp  SakuraoandKosuke2033A.cpp  SashaandtheBeautifulArray1929A.cpp  SettingupCamp1945A.cpp  SimpleDesign1884A.cpp  (+19 more)
Problemsets/900Rating/: ArrayCloningTechnique1665B.cpp  AvtoBus1679A.cpp  BalancedRound1850D.cpp  BattleforSurvive2013B.cpp  CandiesDivision1283B.cpp  Chemistry1883B.cpp  ChipsontheBoard1879B.cpp  Clockwork2062B.cpp  CoinGames1972B.cpp  DIVplusMOD1650B.cpp  Death'sBlessing1749B.cpp  DeletiveEditing1666D.cpp  DivideandMultiply1609A.cpp  DualTrigger1951A.cpp  Dubstep208A.cpp  EveryoneLovesTres2035B.cpp  Fireworks1945B.cpp  GravityFlip405A.cpp  HossamandCombinatorics1771A.cpp  IlyaandBankAccount313A.cpp  Indivisible1818B.cpp  Juicer709A.cpp  Keyboard474A.cpp  MagicNumbers320A.cpp  MakeAP1624B.cpp  MakeMajority1988B.cpp  MakeitDivisibleby251593B.cpp  MochaandMath1559A.cpp  NotDividing1794B.cpp  OddDivisor1475A.cpp  PermutationSwap1828B.cpp  PineappleIncident697A.cpp  PizzaForces.cpp  Promo1697B.cpp  QuickSort1768B.cpp  ReplaceCharacter2047B.cpp  RudolfandtheUglyString1941C.cpp  SakurrakoandWater2033B.cpp  Sale34B.cpp  ShiftingStacks1486A.cpp  (+5 more)
Problemsets/Codeforces Round 938 (Div. 3)/: CompetitionNote.txt  InhabitantoftheDeepSea1955problemC.cpp
Problemsets/Codeforces Round 940 (Div. 2) and CodeCraft-23/: CompetitionNote.txt
Problemsets/Codeforces Round 943 (Div. 3)/: AssemblyviaRemainders1968_C.cpp  CompetitionNote.txt  Maximize1968_A.cpp  Prefiquence1968_B.cpp
Problemsets/Codeforces Round 944 (Div. 4)/: CompetitionNote.txt  MyFirstSortingProblem1971A.cpp
Problemsets/Codeforces Round 954 (Div. 3)/: CompetitionNote.txt  MatrixStabilization1986_B.cpp  UpdateQueries1986_C.cpp  XAxis1986_A.cpp
Problemsets/Codeforces Round 960 (Div. 2)/: ArrayCraft1990_B.cpp  CompetitionNote.txt  SubmissionBait1990_A.cpp
Problemsets/CodeforcesRound938Div3/: YogurtSale1955A.cpp
Problemsets/CodeforcesRound944Div4/: ClockandStrings1971C.cpp
Problemsets/Rating1000/: 378QAQandMochasArray1975B.cpp  (+68 more)
script/: compile_n_run.bat  compile_n_run.ps1  compile_n_run.sh  misc.md  script.md
template/: template.h  templateSTD.cpp  templateSTDOCF.cpp  templateWS.cpp  templateWoS.cpp
(+611 files in other folders)
